feat: 添加SEO注入插件并更新项目配置
- 在vite.config.ts中添加SEO注入插件，自动从config.yml读取配置并注入HTML头部
- 更新config.yml中的主题模式为custom
- 在README.md中添加图标库使用说明
- 在projects.yml中添加新项目"洛天依Grub主题"
- 优化vite配置结构，使用node:path和node:fs模块

--- a/config.yml
+++ b/config.yml
@@ -8,7 +8,7 @@ seo:
 # Theme Configuration
 # mode: 'auto' (System Preference), 'manual' (Fixed Default), 'custom' (Time Schedule)
 theme:
-  mode: "auto" 
+  mode: "custom" 
   default: "light" # Used for manual mode or fallback
   customSchedule:
     start: "19:00" # Start Dark Mode
